@@ -478,6 +478,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 3706) Allow users to be exempted from IP blocks. The ipblock-exempt permission
   key has been added to enable this behaviour, by default assigned to sysops.
 * (bug 7948) importDump.php now warn that Recentchanges need to be rebuild.
+* (bug 7667) allow XHTML namespaces customization
 
 
 == Languages updated ==
